# xygine

./: .gitignore  .travis.yml  CMakeLists.txt  appveyor.yml  readme.md  readme.txt  xygine.sln  xyginext.sln
Demo/: CMakeLists.txt  Demo.vcxproj  Demo.vcxproj.filters  readme.md
Demo/assets/fonts/: Cave-Story.txt  VeraMono.txt
Demo/assets/images/: credits.txt
Demo/assets/localisation/: chichewa.xyl
Demo/assets/maps/: 01.tmx  02.tmx  03.tmx  04.tmx  05.tmx  06.tmx  07.tmx  08.tmx  09.tmx  10.tmx  11.tmx  12.tmx  13.tmx  14.tmx  15.tmx  16.tmx  17.tmx  18.tmx  19.tmx  20.tmx  21.tmx  22.tmx  23.tmx  24.tmx  51.tmx  mapcycle.txt  objecttypes.xml
Demo/assets/particles/: angry.xyp  crate.xyp  dust_hit.xyp  explode.xyp  heart.xyp  leaves.xyp  magic_hat.xyp  panic.xyp  pop.xyp  score.xyp  shoot.xyp  spawn.xyp
Demo/assets/sound/: menu.xas
Demo/assets/sprites/: bubble.spt  ending_food.spt  food.spt  fruit.spt  menu_sprites.spt  npcs.spt  player.spt  power_ups.spt  princess.spt  tower_sprites.spt  ui.spt
Demo/cmake/modules/: FindXYGINEXT.cmake
Demo/macOS/: icon.icns
Demo/src/: ActorSystem.hpp  AnimationController.cpp  AnimationController.hpp  BackgroundShader.hpp  BonusSystem.cpp  BonusSystem.hpp  BubbleSystem.cpp  BubbleSystem.hpp  CMakeLists.txt  CircularBuffer.hpp  ClientNotificationCallbacks.hpp  ClientServerShared.cpp  ClientServerShared.hpp  CollisionComponent.cpp  CollisionSystem.cpp  CollisionSystem.hpp  CommandIDs.hpp  CrateSystem.cpp  CrateSystem.hpp  DynamiteSystem.cpp  DynamiteSystem.hpp  EndingDirector.cpp  EndingDirector.hpp  EndingMessages.hpp  ErrorState.cpp  ErrorState.hpp  Explosion.hpp  FXDirector.cpp  FXDirector.hpp  FruitSystem.cpp  FruitSystem.hpp  Game.cpp  Game.hpp  GameCompleteState.cpp  GameCompleteState.hpp  GameOverState.cpp  GameOverState.hpp  GameState.cpp  GameState.hpp  HatSystem.cpp  (+64 more)
Example/: CMakeLists.txt  Example.vcxproj  Example.vcxproj.filters  readme.md  settings.set
Example/assets/maps/: platform.tmx  thirty_two.tmx
Example/assets/models/: batcat.iqm  batcat.txt  mrfixit.dae  platform_01.iqm
Example/assets/particles/: bubbles.xyp  dustpuff.xyp  explosion.xyp  fairydust.xyp  fire.xyp  lightning.xyp
Example/cmake/modules/: FindXYGINE.cmake
Example/include/: CaveDemoDrawable.hpp  CommandIds.hpp  DeferredDemoState.hpp  Game.hpp  LMAlienController.hpp  LMBulletController.hpp  LMCollisionComponent.hpp  LMCollisionWorld.hpp  LMGameController.hpp  LMHumanController.hpp  LMMothershipController.hpp  LMPlayerController.hpp  LMSpeedMeter.hpp  LunarMoonerState.hpp  MenuMainState.hpp  MenuOptionState.hpp  NetworkDemoBallLogic.hpp  NetworkDemoBot.hpp  NetworkDemoCollisions.hpp  NetworkDemoController.hpp  NetworkDemoPacketIDs.hpp  NetworkDemoPlayerController.hpp  NetworkDemoPlayerInput.hpp  NetworkDemoServer.hpp  NetworkDemoState.hpp  ParticleDemoState.hpp  PhysicsDemoInputController.hpp  PhysicsDemoLine.hpp  PhysicsDemoState.hpp  PlatformBackground.hpp  PlatformDemoState.hpp  PlatformPlayerController.hpp  RacingDemoPlayer.hpp  RacingDemoState.hpp  RacingDemoTrack.hpp  RotationComponent.hpp  StateIds.hpp  TilemapDemoState.hpp  TimedDestruction.hpp
Example/src/: CMakeLists.txt  CaveDemoDrawable.cpp  DeferredDemoState.cpp  Game.cpp  LMAlienController.cpp  LMBulletController.cpp  LMCollisionComponent.cpp  LMCollisionWorld.cpp  LMGameController.cpp  LMHumanController.cpp  LMMothershipController.cpp  LMPlayerController.cpp  LMSpeedMeter.cpp  LunarMoonerState.cpp  MenuMainState.cpp  MenuOptionState.cpp  NetworkDemoBallLogic.cpp  NetworkDemoBot.cpp  NetworkDemoCollisions.cpp  NetworkDemoController.cpp  NetworkDemoPlayerController.cpp  NetworkDemoServer.cpp  NetworkDemoState.cpp  ParticleDemoState.cpp  PhysicsDemoInputController.cpp  PhysicsDemoLine.cpp  PhysicsDemoState.cpp  PlatformBackground.cpp  PlatformDemoState.cpp  PlatformPlayerController.cpp  RacingDemoPlayer.cpp  RacingDemoState.cpp  RacingDemoTrack.cpp  TilemapDemoState.cpp  main.cpp
cmake template/: CMakeLists.txt
cmake template/include/: Game.hpp
cmake template/src/: CMakeLists.txt  Game.cpp  main.cpp
tutorial/part_5/: CMakeLists.txt  readme.md
tutorial/part_5/include/: CollisionSystem.hpp  ResourceIDs.hpp
tutorial/part_5/src/: CMakeLists.txt  GameState.cpp  MyFirstState.cpp
xygine/: CMakeLists.txt  readme.md  xygine.vcxproj  xygine.vcxproj.filters
xygine/cmake/modules/: FindBOX2D.cmake
xygine/documentation/: Doxyfile
xygine/extlibs/box2d-2.3.2/: Box2D-d.lib
xygine/extlibs/sfml/: sfml-audio-d.lib  sfml-audio.lib  sfml-graphics-d.lib  sfml-graphics.lib  sfml-main-d.lib  sfml-main.lib  sfml-network-d.lib  sfml-network.lib  sfml-system-d.lib  sfml-system.lib  sfml-window-d.lib  sfml-window.lib
xygine/res/: logo.psd
xygine/src/: Affectors.cpp  AnimatedDrawable.cpp  AnimationController.cpp  App.cpp  AudioManager.cpp  BitmapFont.cpp  BitmapText.cpp  CMakeLists.txt  CommandQueue.cpp  Component.cpp  ComponentAnimatedDrawable.cpp  ComponentAnimationController.cpp  ComponentAudioListener.cpp  ComponentAudioSource.cpp  ComponentCamera.cpp  ComponentParticleController.cpp  ComponentParticleSystem.cpp  ComponentPointLight.cpp  Console.cpp  Entity.cpp  FileSystem.cpp  FontResource.cpp  GLExtensions.cpp  KeyBinds.cpp  MessageBus.cpp  MultiRenderTexture.cpp  Music.cpp  ParticleAffectors.cpp  ParticleController.cpp  ParticleSystem.cpp  PhysicsAffectorAreaForce.cpp  PhysicsAffectorConstantForce.cpp  PhysicsAffectorPointForce.cpp  PhysicsCollisionCircleShape.cpp  PhysicsCollisionEdgeShape.cpp  PhysicsCollisionPolygonShape.cpp  PhysicsCollisionRectangleShape.cpp  PhysicsCollisionShape.cpp  PhysicsContact.cpp  PhysicsDebugDrawer.cpp  (+41 more)
xyginext/: CMakeLists.txt  xyginext.vcxproj  xyginext.vcxproj.filters
xyginext/doc/: Doxyfile
xyginext/extras/: CircularBuffer.hpp  IniParse.hpp  InterpolationComponent.cpp  InterpolationSystem.cpp  InterpolationSystem.hpp  KeyMapping.hpp  PhysicsObject.cpp  PhysicsSystem.cpp  PhysicsSystem.hpp  ShapeUtils.hpp  SliderSystem.cpp  SliderSystem.hpp  SoundEffectsDirector.cpp  SoundEffectsDirector.hpp  readme.md
xyginext/src/: CMakeLists.txt
(+740 files in other folders)
